tests/ui/control_path_local_cross_role.stderr
error[E0080]: evaluation panicked: local control messages require self-send
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `hibana::g::send::<0, 1, hibana::g::Msg<161, (), hibana::integration::cap::control::LoopContinueKind>, 0>::{constant#0}` failed here
  |
 ::: src/g.rs
  |
  |             panic!("{}", error.message());
  |             ----------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  | /     const {
  | |         if FROM >= ROLE_DOMAIN_SIZE || TO >= ROLE_DOMAIN_SIZE {
  | |             panic!("{}", ROLE_INDEX_ERROR);
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<0, 1, Msg<161, (), LoopContinueKind>, 0>`
  --> tests/ui/control_path_local_cross_role.rs:7:13
   |
 7 |       let _ = g::send::<
   |  _____________^
 8 | |         0,
 9 | |         1,
10 | |         g::Msg<{ LOOP_CONTINUE_LOGICAL }, (), LoopContinueKind>,
11 | |         0,
12 | |     >();
   | |_______^
